tests/decompile-test/errors/output_expressions_local_scope.ts
// @case: binary expression
{
    1 + 1
}